...
            <LinearLayout
                android:id="@+id/add_transfer_method_static_container_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/transfer_method_information"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/grid_margin_left"
                    android:text="@string/mobileFeesAndProcessingTime"
                    android:textAppearance="@style/TextAppearance.Hyperwallet.Body2" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/add_transfer_method_static_container"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:layout_height="@dimen/row_height_single_entry"
                android:background="@color/colorBackgroundDisabled"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/add_transfer_method_information"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/grid_padding_left"
                    tools:text="@string/feesAndProcessTimePlaceholder"
                    android:textAppearance="@style/TextAppearance.Hyperwallet.Body1" />

...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/add_transfer_method_button"
                    style="@style/Widget.Hyperwallet.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginStart="@dimen/button_left_margin"
                    android:layout_marginTop="@dimen/button_top_margin"
                    android:layout_marginEnd="@dimen/button_right_margin"
                    android:layout_marginBottom="@dimen/button_bottom_margin"
                    android:maxWidth="@dimen/create_button_max_width"
                    android:text="@string/createTransferMethodButtonLabel"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

...
