<resources>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_connectivity_title">Connectivity Issue</string>
    <string name="error_dialog_unexpected_title">Unexpected Error</string>
    <string name="ok">OK</string>
    <string name="try_again_button_label">Try again</string>
    <string name="not_available">Not Available</string>

    <!-- title and font icon -->
    <string name="bank_account">Bank Account</string>
    <string name="bank_card">Debit Card</string>
    <string name="wire_account">Wire Transfer Account</string>
    <string name="paper_check">Paper Check</string>
    <string name="prepaid_card">Prepaid Card</string>
    <string name="paypal_account">PayPal Account</string>
    <string name="venmo_account">Venmo Account</string>
    <string name="cash_pickup_mg">MoneyGram</string>
    <string name="visa" translatable="false">Visa</string>
    <string name="mastercard" translatable="false">Mastercard</string>

    <string name="bank_account_font_icon" translatable="false">\ue900</string>
...
