...
    <item name="cardNumber" type="id" />
    <item name="cardNumberLabel" type="id" />
    <item name="dateOfExpiry" type="id" />
    <item name="dateOfExpiryLabel" type="id" />
    <item name="cvv" type="id" />
    <item name="cvvLabel" type="id" />
    <item name="email" type="id"/>
    <item name="emailLabel" type="id"/>
    <item name="bankAccountRelationship" type="id"/>
    <item name="bankAccountRelationshipLabel" type="id"/>
    <item name="bankId" type="id"/>
    <item name="bankIdLabel" type="id"/>
    <item name="bankName" type="id"/>
    <item name="bankNameLabel" type="id"/>
...
